# growth-forge

./: .makim.yaml  .pre-commit-config.yaml  .prettierignore  .releaserc.json  .sugar.yaml  404.html  README.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  views_test_forge.py
.envs/.production/: .django  .postgres
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
changelog/: index.html
conda/: dev.yaml
containers/: Dockerfile  compose.base.yaml  compose.local.yml  compose.production.yml  compose.yaml
containers/app/: Dockerfile
containers/app/scripts/: entrypoint.sh  install-deps.sh
containers/postgres/: Dockerfile
containers/traefik/: traefik.yml
contributing/: index.html
docs/: contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
installation/: index.html
search/: search_index.json
src/: manage.py
src/config/: api_router.py  asgi.py  urls.py  websocket.py  wsgi.py
src/config/settings/: base.py  dev.py  production.py  test.py
src/feedback_linker/: __init__.py  app.py  conftest.py  forms.py  models.py
src/feedback_linker/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/feedback_linker/templates/: base.html  index.html  projects.html
src/feedback_linker/templates/account/: logout.html  password_change.html
src/feedback_linker/templates/users/: user_detail.html
src/feedback_linker/users/: adapters.py  admin.py  apps.py  context_processors.py  managers.py  models.py  urls.py  views.py
src/feedback_linker/users/api/: serializers.py
src/feedback_linker/users/migrations/: 0001_initial.py
src/feedback_linker/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
src/growth_forge/: conftest.py  models.py  urls.py  utils.py
src/growth_forge/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/growth_forge/migrations/: 0001_initial.py
src/growth_forge/templates/: 404.html  500.html  base.html
src/growth_forge/templates/account/: base.html  email.html  logout.html  password_reset_done.html  password_reset_from_key_done.html  signup.html
src/growth_forge/templates/pages/: about.html  home.html
src/growth_forge/templates/users/: user_detail.html  user_form.html
src/growth_forge/tests/: test_models.py
src/growth_forge/users/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py
src/growth_forge/users/api/: serializers.py  views.py
src/growth_forge/users/migrations/: 0001_initial.py
src/growth_forge/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_swagger.py  test_urls.py  test_views.py
src/growth_plan/: apps.py  forms.py  models.py  urls.py  views.py
src/growth_plan/migrations/: 0001_initial.py
src/growth_plan/templates/: growth-plan-item-confirm-delete.html  growth-plan-item-form.html  my-growth-plan.html  review-growth-plan-list.html
src/growth_plan/tests/: test_models.py
src/growth_plan_linker/: conftest.py  forms.py  models.py  urls.py  views.py
src/growth_plan_linker/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/growth_plan_linker/migrations/: 0001_initial.py
src/growth_plan_linker/static/css/: styles.css
src/growth_plan_linker/static/js/: scripts.js
src/growth_plan_linker/templates/: 403.html  base.html
src/growth_plan_linker/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
src/growth_plan_linker/templates/pages/: about.html  home.html
src/growth_plan_linker/templates/users/: user_detail.html  user_form.html
src/growth_plan_linker/users/: adapters.py  admin.py  apps.py  managers.py  models.py  urls.py
src/growth_plan_linker/users/api/: serializers.py  views.py
src/growth_plan_linker/users/migrations/: 0001_initial.py
src/growth_plan_linker/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_swagger.py  test_urls.py  test_views.py
src/linker/: forms.py  models.py  urls.py  views.py
src/linker/migrations/: 0001_initial.py
src/locale/: README.md
src/locale/en_US/LC_MESSAGES/: django.po
src/locale/fr_FR/LC_MESSAGES/: django.po
src/locale/pt_BR/LC_MESSAGES/: django.po
src/one_on_one/: apps.py  forms.py  models.py  urls.py  views.py
src/one_on_one/migrations/: 0001_initial.py
src/one_on_one/templates/: link-confirm-delete.html  link-form.html  link-list.html
src/one_on_one/tests/: test_models.py
src/projects/: forms.py  models.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py
src/projects/templates/: delete.html  form.html  list.html
src/projects/tests/: test_models.py
tests/: __init__.py  test_feedback_linker.py
